# decmux

./: .gitignore  DESIGN.md  README.md  pyproject.toml
decmux/: app.py  assets.py  bus.py  cli.py  cmux.py  config.py  errors.py  hooks.py  policy.py  session.py  shell_state.py  store.py  update.py  watch.py
tests/: test_app.py  test_bus.py  test_cli.py  test_errors.py  test_integration.py  test_session.py  test_store.py  test_update.py  test_watch.py
