[project]
name = "decmux"
version = "0.1.0"
description = "Per-workspace, foreground control plane for cmux-hosted AI coding agents"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
decmux = "decmux.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["decmux"]
