[project]
name = "decmux"
version = "0.2.7"
description = "Per-workspace, foreground control plane for cmux-hosted AI coding agents"
requires-python = ">=3.12"
dependencies = [
    "prompt_toolkit>=3.0",
]

[project.scripts]
decmux = "decmux.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["decmux"]
